--- a/intro.html
+++ b/intro.html
@@ -2,6 +2,8 @@
 <html>
   <head>
     <meta charset="utf-8">
+    <META http-equiv="refresh"
+      content="30;URL=game.html">
     <title>Intro</title>
     <link rel="stylesheet" href="styles.css"/>
     <link href='https://fonts.googleapis.com/css?family=Luckiest+Guy' rel='stylesheet' type='text/css'>
@@ -26,8 +28,14 @@
 
 <!-- Center area that'll display scores. -->
       <div id="dialogue">
-        <img src="images/talkBox.png"></img>
+        <div id="iconBox">
+          <img src="images/computerDialogue.png" id="icon"/>
+          <!-- <img src="images/redDialogue.png" id="redTalk"/> -->
+        </div>
+        <div class="element">
 
+        </div>
+        <img src="images/talkBox.png"></img>
       </div>
 
 <!-- Right side which holds Player 2/Computer and monsters -->
@@ -44,9 +52,27 @@
       This is a non-profit fan-based PARODY game. It is my first attempt at making a simple game with HTML, CSS, and Javascript. Pokemon is owned by Nintendo, GAME FREAK inc, and Creatures Inc. Please support the official franchise.
     </h6>
     </div>
-    <audio autoplay id="levelup" src=""></audio>
-    <audio autoplay loop id="battlemusic" src="#"></audio>
+    <audio autoplay loop id="intromusic" src="intro.mp3"></audio>
     <script src="https://code.jquery.com/jquery-1.11.3.js" type="text/javascript"></script>
     <script src="scripts.js" type="text/javascript"></script>
+    <script src="typed.js"></script>
+    <script id="intro">
+        $(function(event){
+            // Blue talks
+            $(".element").typed({
+              strings: [
+                "Hey you!!",
+                "Yeah you!!!!!",
+                "The silent type ehhhhh?!?!",
+                "I see you also keep dangerous monsters as your slaves at the age of 11.....",
+                "Then I challenge you to the most not-so-dangerous sport known to man!",
+                "I challenge you to....",
+                "WATER, GRASS, FIRE!!!!"],
+              typeSpeed: 0
+            });
+        });
+
+
+    </script>
   </body>
 </html>
