Finish first game

--- a/game.html
+++ b/game.html
@@ -104,13 +104,13 @@
 
         <li id="playerText">
 
-            <span>Player:</span>
+            <span>Player Chose</span></br>
             <span id="playerChoice"></span>
 
         </li>
         <li id="computerText">
 
-            <span>Computer:</span>
+            <span>Computer Chose</span></br>
             <span id="computerChoice"></span>
 
         </li>
