--- a/Game Folder/game.html
+++ b/Game Folder/game.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>Water, Grass, Fire!</title>
-    <link rel="stylesheet" href="styles.css"/>
+    <link rel="stylesheet" href="css/styles.css"/>
     <link href='https://fonts.googleapis.com/css?family=Luckiest+Guy' rel='stylesheet' type='text/css'>
     <link href='https://fonts.googleapis.com/css?family=VT323' rel='stylesheet' type='text/css'>
   </head>
@@ -133,6 +133,6 @@
     <audio autoplay id="levelup" src=""></audio>
     <audio autoplay loop id="battlemusic" src="#"></audio>
     <script src="https://code.jquery.com/jquery-1.11.3.js" type="text/javascript"></script>
-    <script src="scripts.js" type="text/javascript"></script>
+    <script src="script/scripts.js" type="text/javascript"></script>
   </body>
 </html>
