--- a/Game Folder/intro.html
+++ b/Game Folder/intro.html
@@ -6,7 +6,7 @@
     <META http-equiv="refresh"
       content="30;URL=game.html">
     <title>Intro</title>
-    <link rel="stylesheet" href="styles.css"/>
+    <link rel="stylesheet" href="css/styles.css"/>
     <link href='https://fonts.googleapis.com/css?family=Luckiest+Guy' rel='stylesheet' type='text/css'>
     <link href='https://fonts.googleapis.com/css?family=VT323' rel='stylesheet' type='text/css'>
   </head>
@@ -52,10 +52,10 @@
       This is a non-profit fan-based PARODY game. It is my first attempt at making a simple game with HTML, CSS, and Javascript. Pokemon is owned by Nintendo, GAME FREAK inc, and Creatures Inc. Please support the official franchise.
     </h6>
     </div>
-    <audio autoplay loop id="intromusic" src="intro.mp3"></audio>
+    <audio autoplay loop id="intromusic" src="music/intro.mp3"></audio>
     <script src="https://code.jquery.com/jquery-1.11.3.js" type="text/javascript"></script>
-    <script src="scripts.js" type="text/javascript"></script>
-    <script src="typed.js"></script>
+    <script src="script/scripts.js" type="text/javascript"></script>
+    <script src="script/typed.js"></script>
     <script id="intro">
         $(function(event){
             // Blue talks
