--- a/Game Folder/intro.html
+++ b/Game Folder/intro.html
@@ -61,7 +61,7 @@
             // Blue talks
             $(".element").typed({
               strings: [
-                "Hey you!!!!!",
+                ".....Hey you!!!!!",
                 "Yeah you!!!!!",
                 "The silent type ehhhhh?!?!",
                 "I see you also keep dangerous monsters as your slaves at the age of 11.....",
