add instruction function and a little bit of media query

--- a/Game Folder/game.html
+++ b/Game Folder/game.html
@@ -120,10 +120,10 @@
 
     </div>
     <div id="instructions">
-      1. Think rock, paper, scissors.</br>
+        1. Think rock, paper, scissors.</br>
         2. Click on one of the 3 monsters!</br>
         3. Get 5 wins and you win!!!</br>
-        4. Have fun and share it with your friends!
+        4. Have fun and click here to continue!
     </div>
     <div id="disclaimer">
     <h6>
