--- a/Game Folder/intro.html
+++ b/Game Folder/intro.html
@@ -47,7 +47,7 @@
     </div>
 <!-- bottom div that'll display state a disclaimer -->
 
-    <div id="disclaimer">
+    <div id="disclaimer1">
     <h6>
       This is a non-profit fan-based PARODY game. It is my first attempt at making a simple game with HTML, CSS, and Javascript. Pokemon is owned by Nintendo, GAME FREAK inc, and Creatures Inc. Please support the official franchise.
     </h6>
