able to evolve pokemon individually

--- a/Game Folder/game.html
+++ b/Game Folder/game.html
@@ -8,7 +8,7 @@
     <link href='https://fonts.googleapis.com/css?family=VT323' rel='stylesheet' type='text/css'>
   </head>
 <!-- Add the onload function to body that'll play background music at 50% volume when page loads -->
-  <body onload="battleMusic()">
+  <body onload="getStarted()">
 <!-- Header with title and logo's -->
     <div id="top">
       <img src="images/rockpaperscissors.png" id="logoleft" />
@@ -77,19 +77,19 @@
           <ul class="choices2">
             <li>
               <a>
-                <img src="images/computerMonster/water1.gif" width="80px" id="blueB" class="select2"/>
+                <img src="images/computerMonster/water1.gif" width="80px" id="waterZ" class="select2"/>
               </a>
             </li>
 </br>
             <li>
               <a>
-                <img src="images/computerMonster/grass1.gif" width="80px" id="greenB" class="select2"/>
+                <img src="images/computerMonster/grass1.gif" width="80px" id="grassZ" class="select2"/>
               </a>
             </li>
 </br>
             <li>
               <a>
-                <img src="images/computerMonster/fire1.gif" width="70px" id="redB" class="select2"/>
+                <img src="images/computerMonster/fire1.gif" width="70px" id="fireZ" class="select2"/>
               </a>
             </li>
           </ul>
