--- a/Game Folder/game.html
+++ b/Game Folder/game.html
@@ -131,7 +131,8 @@
     </h6>
     </div>
     <audio autoplay id="levelup" src=""></audio>
-    <audio autoplay loop id="battlemusic" src="#"></audio>
+    <audio autoplay loop id="ending" src=""></audio>
+    <audio autoplay loop id="battlemusic" src=""></audio>
     <script src="https://code.jquery.com/jquery-1.11.3.js" type="text/javascript"></script>
     <script src="script/scripts.js" type="text/javascript"></script>
   </body>
