--- a/Game Folder/intro.html
+++ b/Game Folder/intro.html
@@ -41,7 +41,7 @@
 <!-- Right side which holds Player 2/Computer -->
         <div id="player2">
           <img src="images/Players/Computer.png" id="pic2"></img>
-          <h2>Computer</h2>
+          <h2>Rich Brat</h2>
         </div>
 
     </div>
