change width of h3

--- a/Game Folder/game.html
+++ b/Game Folder/game.html
@@ -47,7 +47,7 @@
 
 <!-- Center area that'll display scores. -->
       <div id="arena">
-        <h3>Choose</br>your</br>monster!</h3>
+        <h3>Choose your monster!</h3>
         <div class="scores">
 
           <div class="score-box1">
