--- a/intro.html
+++ b/intro.html
@@ -4,9 +4,9 @@
     <meta charset="utf-8">
     <!-- This meta will refresh the page into a new url assigned to game.html -->
     <META http-equiv="refresh"
-      content="30;URL=game.html">
+      content="30;URL=gamefolder/game.html">
     <title>Intro</title>
-    <link rel="stylesheet" href="css/styles.css"/>
+    <link rel="stylesheet" href="gamefolder/css/styles.css"/>
     <link href='https://fonts.googleapis.com/css?family=Luckiest+Guy' rel='stylesheet' type='text/css'>
     <link href='https://fonts.googleapis.com/css?family=VT323' rel='stylesheet' type='text/css'>
   </head>
@@ -14,15 +14,15 @@
   <body>
 <!-- Header with title and logo's -->
     <div id="top">
-      <img src="images/rockpaperscissors.png" id="logoleft" />
+      <img src="gamefolder/images/rockpaperscissors.png" id="logoleft" />
       <h1>Water, Grass, Fire!</h1>
-      <img src="images/rockpaperscissors.png" id="logoright" />
+      <img src="gamefolder/images/rockpaperscissors.png" id="logoright" />
     </div>
 
     <div id="game-area">
 <!-- Left side which holds Player 1 -->
         <div id="player1">
-          <img src="images/Players/Player1.png" id="pic1"></img>
+          <img src="gamefolder/images/Players/Player1.png" id="pic1"></img>
           <h2>Player 1</h2>
         </div>
 
@@ -30,17 +30,17 @@
 <!-- Center area that'll display the intro dialogue. -->
       <div id="dialogue">
         <div id="iconBox">
-          <img src="images/computerDialogue.png" id="icon"/>
+          <img src="gamefolder/images/computerDialogue.png" id="icon"/>
         </div>
         <div class="element">
 
         </div>
-        <img src="images/talkBox.png"></img>
+        <img src="gamefolder/images/talkBox.png"></img>
       </div>
 
 <!-- Right side which holds Player 2/Computer -->
         <div id="player2">
-          <img src="images/Players/Computer.png" id="pic2"></img>
+          <img src="gamefolder/images/Players/Computer.png" id="pic2"></img>
           <h2>Rich Brat</h2>
         </div>
 
@@ -52,10 +52,10 @@
       This is a non-profit fan-based PARODY game. It is my first attempt at making a simple game with HTML, CSS, and Javascript. Pokemon is owned by Nintendo, GAME FREAK inc, and Creatures Inc. Please support the official franchise.
     </h6>
     </div>
-    <audio autoplay loop id="intromusic" src="music/intro.mp3"></audio>
+    <audio autoplay loop id="intromusic" src="gamefolder/music/intro.mp3"></audio>
     <script src="https://code.jquery.com/jquery-1.11.3.js" type="text/javascript"></script>
-    <script src="script/scripts.js" type="text/javascript"></script>
-    <script src="script/typed.js"></script>
+    <script src="gamefolder/script/scripts.js" type="text/javascript"></script>
+    <script src="gamefolder/script/typed.js"></script>
     <script id="intro">
         $(function(event){
             // Blue talks
