add media query settings

--- a/gamefolder/game.html
+++ b/gamefolder/game.html
@@ -20,7 +20,7 @@
 <!-- Left side which holds Player 1 and monsters -->
         <div id="player1">
           <img src="images/Players/Player1.png" id="pic1"></img>
-          <h2>Player 1</h2>
+          <h2>Red</h2>
         </div>
         <div class="monsterBox1">
 
@@ -79,7 +79,7 @@
 <!-- Right side which holds Player 2/Computer and monsters -->
         <div id="player2">
           <img src="images/Players/Computer.png" id="pic2"></img>
-          <h2>Rich Brat</h2>
+          <h2>Blue</h2>
         </div>
         <div class="monsterBox2">
           <ul class="choices2">
@@ -124,7 +124,6 @@
         <h5 id="endingText"></h5>
         <button id="button" type="button" name="button">TRY AGAIN</button>
     </div>
-
     <audio autoplay id="thud" src=""></audio>
     <audio autoplay id="attack" src=""></audio>
     <audio autoplay loop id="critical" src=""></audio>
