--- a/index.html
+++ b/index.html
@@ -44,11 +44,12 @@
 
     </div>
 <!-- bottom div that'll display state a disclaimer -->
-
-    <div id="disclaimer1">
-    <h6>
-      This is a non-profit fan-based PARODY game. It is my first attempt at making a simple game with HTML, CSS, and Javascript. Pokemon is owned by Nintendo, GAME FREAK inc, and Creatures Inc. Please support the official franchise.
-    </h6>
+    <div id="bottom">
+      <div id="disclaimer">
+      <h6>
+        This is a non-profit fan-based PARODY game. It is my first attempt at making a simple game with HTML, CSS, and Javascript. Pokemon is owned by Nintendo, GAME FREAK inc, and Creatures Inc. Please support the official franchise.
+      </h6>
+      </div>
     </div>
     <audio autoplay loop id="intromusic" src="gamefolder/music/intro.mp3"></audio>
     <script src="https://code.jquery.com/jquery-1.11.3.js" type="text/javascript"></script>
