change button text

--- a/gamefolder/game.html
+++ b/gamefolder/game.html
@@ -120,13 +120,13 @@
     </div>
     <div id="ending" style="display: none;">
         <h5 id="endingText"></h5>
-        <button id="button" type="button" name="button">TRY AGAIN</button>
+        <button id="button" type="button" name="button">RETRY</button>
     </div>
     <audio autoplay id="thud" src=""></audio>
     <audio autoplay id="attack" src=""></audio>
     <audio autoplay loop id="critical" src=""></audio>
     <audio autoplay id="levelup" src=""></audio>
-    <audio autoplay loop id="battlemusic" src="music/battlemusic.mp3"></audio>
+    <audio id="battlemusic" src="music/battlemusic.mp3"></audio>
     <script src="https://code.jquery.com/jquery-1.11.3.js" type="text/javascript"></script>
     <script src="script/scripts.js" type="text/javascript"></script>
   </body>
