--- a/gamefolder/game.html
+++ b/gamefolder/game.html
@@ -126,7 +126,7 @@
     <audio autoplay id="attack" src=""></audio>
     <audio autoplay loop id="critical" src=""></audio>
     <audio autoplay id="levelup" src=""></audio>
-    <audio id="battlemusic" src="music/battlemusic.mp3"></audio>
+    <audio autoplay loop id="battlemusic" src="music/battlemusic.mp3"></audio>
     <script src="https://code.jquery.com/jquery-1.11.3.js" type="text/javascript"></script>
     <script src="script/scripts.js" type="text/javascript"></script>
   </body>
